hello world typescript

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "typescript_stu3",
     "version": "1.0.0",
     "main": "index.js",
+    "scripts": {
+        "webpack":"./node_modules/.bin/webpack"
+    },
     "repository": {
         "type": "git",
         "url": "git@github.com:yichengjie/typescript_stu3.git"
@@ -11,11 +14,23 @@
         "react"
     ],
     "author": {
-      "name": "yicj",
-      "email": "626659321@qq.com"   
+        "name": "yicj",
+        "email": "626659321@qq.com"
     },
     "bugs": {
         "url": "https://github.com/yichengjie/typescript_stu3/issues"
     },
-    "homepage": "https://github.com/yichengjie/typescript_stu3#readme"
+    "homepage": "https://github.com/yichengjie/typescript_stu3#readme",
+    "dependencies": {
+        "@types/react": "^15.0.34",
+        "@types/react-dom": "^15.5.1",
+        "react": "^15.6.1",
+        "react-dom": "^15.6.1"
+    },
+    "devDependencies": {
+        "awesome-typescript-loader": "^3.2.1",
+        "source-map-loader": "^0.2.1",
+        "typescript": "^2.4.1",
+        "webpack": "^3.0.0"
+    }
 }
