--- a/package.json
+++ b/package.json
@@ -26,11 +26,20 @@
         "lodash": "^4.17.4",
         "moment": "^2.18.1",
         "react": "^15.6.1",
-        "react-dom": "^15.6.1"
+        "react-dom": "^15.6.1",
+        "ts-loader": "^2.2.2"
     },
     "devDependencies": {
         "@types/react-hot-loader": "next",
         "awesome-typescript-loader": "^3.2.1",
+        "babel-core": "^6.25.0",
+        "babel-loader": "^7.1.1",
+        "babel-plugin-import": "^1.2.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
         "css-loader": "^0.28.4",
         "express": "^4.15.3",
         "extract-text-webpack-plugin": "^2.1.2",
