--- a/antd-demo/tsconfig.json
+++ b/antd-demo/tsconfig.json
@@ -6,8 +6,7 @@
         "target": "es6",
         "jsx": "preserve",
         "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true,
-        "watch":true
+        "experimentalDecorators": true
     },
     "include": [
         "./scripts/ts/**/*"
