--- a/package.json
+++ b/package.json
@@ -26,12 +26,10 @@
         "lodash": "^4.17.4",
         "moment": "^2.18.1",
         "react": "^15.6.1",
-        "react-dom": "^15.6.1",
-        "ts-loader": "^2.2.2"
+        "react-dom": "^15.6.1"
     },
     "devDependencies": {
         "@types/react-hot-loader": "next",
-        "awesome-typescript-loader": "^3.2.1",
         "babel-core": "^6.25.0",
         "babel-loader": "^7.1.1",
         "babel-plugin-import": "^1.2.1",
