--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/yichengjie/typescript_stu3#readme",
     "dependencies": {
+        "@types/node": "^8.0.7",
         "@types/react": "^15.0.34",
         "@types/react-dom": "^15.5.1",
         "antd": "^2.11.2",
