--- a/price2/tsconfig.json
+++ b/price2/tsconfig.json
@@ -6,7 +6,8 @@
         "target": "es6",
         "jsx": "preserve",
         "allowSyntheticDefaultImports": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "noUnusedLocals": true
     },
     "include": [
         "./client/typescript/**/*"
@@ -14,6 +15,9 @@
     "exclude": [
         "node_modules",
         "**/*.spec.ts"
+    ],
+    "types": [
+        "typePatches"
     ]
 }
 // "outDir": "./es/",
