--- a/price2/tsconfig.json
+++ b/price2/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "compileOnSave":true,
     "compilerOptions": {
         "outDir": "./client/es6/",
         "noImplicitAny": true,
@@ -7,7 +8,12 @@
         "jsx": "preserve",
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
-        "noUnusedLocals": true
+        "noUnusedLocals": true,
+        "noImplicitReturns": true,
+        "strictNullChecks": true,
+        "removeComments": true,
+        "suppressImplicitAnyIndexErrors":true,
+        "forceConsistentCasingInFileNames": true
     },
     "include": [
         "./client/typescript/**/*"
