--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
         "react-dom": "^15.6.1"
     },
     "devDependencies": {
+        "@types/classnames": "^2.2.0",
         "@types/lodash": "^4.14.68",
         "@types/prop-types": "^15.5.1",
         "@types/react": "^15.0.34",
         "@types/react-dom": "^15.5.1",
-        "@types/classnames": "^2.2.0",
-        "@types/react-hot-loader": "next",
+        "@types/react-hot-loader": "^3.0.3",
         "babel-core": "^6.25.0",
         "babel-loader": "^7.1.1",
         "babel-plugin-import": "^1.2.1",
@@ -41,6 +41,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "classnames": "^2.2.5",
         "css-loader": "^0.28.4",
         "express": "^4.15.3",
         "extract-text-webpack-plugin": "^2.1.2",
