在price2的基础上引入了ts-loader到webpack的配置中

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
         "less": "^2.7.2",
         "less-loader": "^4.0.4",
         "react-hot-loader": "next",
-        "source-map-loader": "^0.2.1",
         "style-loader": "^0.18.2",
+        "ts-loader": "^2.2.2",
         "typescript": "^2.4.1",
         "webpack": "^3.0.0",
         "webpack-dev-server": "^2.5.0",
