--- a/price3/tsconfig.json
+++ b/price3/tsconfig.json
@@ -4,19 +4,21 @@
         "outDir": "./client/ts-build",
         "moduleResolution": "node",
         "module":"es6",
-        //"strict":true,
         "target": "es6",
         "jsx": "preserve",
         "sourceMap": true,
-        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noUnusedLocals": true,
         "allowSyntheticDefaultImports": true,
         "experimentalDecorators": true,
-        "noUnusedLocals": true,
-        "noImplicitReturns": true,
-        "strictNullChecks": true,
         "removeComments": true,
         "suppressImplicitAnyIndexErrors":true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        //"strictNullChecks": true,
+        //"noImplicitAny": true,
+        //"noImplicitThis":true,
+        //"alwaysStrict":true,
+        "strict":true
     },
     "include": [
         "./client/src/**/*"
