--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
         "react-hot-loader": "next",
         "style-loader": "^0.18.2",
         "ts-loader": "^2.2.2",
+        "tslint": "^5.5.0",
+        "tslint-loader": "^3.5.3",
+        "tslint-react": "^3.0.0",
         "typescript": "^2.4.1",
         "webpack": "^3.0.0",
         "webpack-dev-server": "^2.5.0",
