第一版tslint修改完成

--- a/price3/tsconfig.json
+++ b/price3/tsconfig.json
@@ -14,11 +14,11 @@
         "removeComments": true,
         "suppressImplicitAnyIndexErrors":true,
         "forceConsistentCasingInFileNames": true,
-        //"strictNullChecks": true,
-        //"noImplicitAny": true,
-        //"noImplicitThis":true,
-        //"alwaysStrict":true,
-        "strict":true
+        "strictNullChecks": true,
+        "noImplicitAny": true,
+        "noImplicitThis":true,
+        "alwaysStrict":true
+        //"strict":true
     },
     "include": [
         "./client/src/**/*"
