--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "dependencies": {
         "antd": "^2.11.2",
         "lodash": "^4.17.4",
+        "md5": "^2.2.1",
         "moment": "^2.18.1",
+        "qrcode": "^0.8.2",
         "react": "^15.6.1",
-        "react-dom": "^15.6.1"
+        "react-dom": "^15.6.1",
+        "react-router-dom": "^4.1.1",
+        "uuid": "^3.1.0"
     },
     "devDependencies": {
         "@types/classnames": "^2.2.0",
@@ -33,6 +37,7 @@
         "@types/react": "^15.0.34",
         "@types/react-dom": "^15.5.1",
         "@types/react-hot-loader": "^3.0.3",
+        "@types/react-router-dom": "^4.0.5",
         "babel-core": "^6.25.0",
         "babel-loader": "^7.1.1",
         "babel-plugin-import": "^1.2.1",
