--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "css-loader": "^0.28.4",
         "express": "^4.15.3",
         "extract-text-webpack-plugin": "^2.1.2",
+        "file-loader": "^0.11.2",
         "html-webpack-plugin": "^2.29.0",
         "less": "^2.7.2",
         "less-loader": "^4.0.4",
@@ -60,6 +61,7 @@
         "tslint-loader": "^3.5.3",
         "tslint-react": "^3.0.0",
         "typescript": "^2.4.1",
+        "url-loader": "^0.5.9",
         "webpack": "^3.0.0",
         "webpack-dev-server": "^2.5.0",
         "webpack-manifest-plugin": "^1.1.0",
