--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "devDependencies": {
         "@types/classnames": "^2.2.0",
         "@types/lodash": "^4.14.68",
+        "@types/node": "^8.0.8",
         "@types/prop-types": "^15.5.1",
-        "@types/react": "^15.0.34",
+        "@types/react": "^15.0.35",
         "@types/react-dom": "^15.5.1",
         "@types/react-hot-loader": "^3.0.3",
         "@types/react-router-dom": "^4.0.5",
@@ -62,9 +63,9 @@
         "tslint-react": "^3.0.0",
         "typescript": "^2.4.1",
         "url-loader": "^0.5.9",
-        "webpack": "^3.0.0",
-        "webpack-dev-server": "^2.5.0",
-        "webpack-manifest-plugin": "^1.1.0",
+        "webpack": "^3.1.0",
+        "webpack-dev-server": "^2.5.1",
+        "webpack-manifest-plugin": "^1.1.1",
         "webpack-merge": "^4.1.0"
     }
 }
