--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "devDependencies": {
         "@types/classnames": "^2.2.0",
         "@types/lodash": "^4.14.68",
+        "@types/moment": "^2.13.0",
         "@types/node": "^8.0.8",
         "@types/prop-types": "^15.5.1",
         "@types/react": "^15.0.35",
