--- a/platform2/package.json
+++ b/platform2/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "price2.0 update to webpack2.0",
     "scripts": {
+        "tsc": "../node_modules/.bin/tsc",
         "test": "../node_modules/.bin/jest",
         "server": "node ./server/server.js",
         "build": "../node_modules/.bin/webpack --config ./client/webpack.config.js --env=prod --progress --profile --colors",
