先暂时保存，升级模块后无法npm run build了

--- a/platform2/tsconfig.json
+++ b/platform2/tsconfig.json
@@ -30,6 +30,9 @@
     "types": [
         "typePatches"
     ]
+    // ,"files": [
+    //     "typings/index.d.ts"
+    // ]
 }
 // "outDir": "./es/",
 // "strictNullChecks": true,
