--- a/price3/tsconfig.json
+++ b/price3/tsconfig.json
@@ -29,6 +29,9 @@
     ],
     "types": [
         "typePatches"
+    ],
+    "files": [
+        "typings/index.d.ts"
     ]
 }
 // "outDir": "./es/",
