--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "html-webpack-plugin": "^2.29.0",
         "less": "^2.7.2",
         "less-loader": "^4.0.4",
+        "react-dev-utils": "^3.0.2",
         "react-hot-loader": "next",
         "style-loader": "^0.18.2",
         "ts-loader": "^2.2.2",
