--- a/platform2/package.json
+++ b/platform2/package.json
@@ -8,7 +8,9 @@
         "server": "node ./server/server.js",
         "build": "../node_modules/.bin/webpack --config ./client/webpack.config.js --env=prod --progress --profile --colors",
         "dev": "../node_modules/.bin/webpack-dev-server --config ./client/webpack.config.js --env=dev --progress --profile --colors",
-        "dev2": "../node_modules/.bin/webpack-dev-server --config ./client/webpack.config.js --env=dev --progress --profile --colors --open"
+        "dev2": "../node_modules/.bin/webpack-dev-server --config ./client/webpack.config.js --env=dev --progress --profile --colors --open",
+        "ttt":"node ./scripts/build.js --env=prod",
+        "ttt2":"node ./scripts/build.js --env=dev"
     },
     "jest": {}
 }
