--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "body-parser": "^1.17.2",
         "classnames": "^2.2.5",
         "css-loader": "^0.28.4",
         "express": "^4.15.3",
