--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "body-parser": "^1.17.2",
         "classnames": "^2.2.5",
         "css-loader": "^0.28.4",
+        "enzyme": "^2.9.1",
         "express": "^4.15.3",
         "extract-text-webpack-plugin": "^2.1.2",
         "file-loader": "^0.11.2",
@@ -53,6 +54,7 @@
         "less": "^2.7.2",
         "less-loader": "^4.0.4",
         "react-hot-loader": "next",
+        "react-test-renderer": "^15.6.1",
         "style-loader": "^0.18.2",
         "ts-loader": "^2.2.2",
         "tslint": "^5.5.0",
