--- a/price5/.babelrc
+++ b/price5/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": [
-    ["es2015",{"modules":false}],
+    [
+      "es2015"
+      //,{"modules":false}
+    ],
     "stage-2",
     "react"
   ],
